# frenchbee

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
frenchbee/: __init__.py  cli.py  data.py  frenchbee.py  models.py  reese84.py
py_frenchbee/: frenchbee.py
tests/: test_frenchbee.py  test_py_frenchbee.py
