[tool.poetry]
name = "py-frenchbee"
version = "0.1.0"
description = "Python client for finding French Bee airline prices."
authors = ["Kevin Ramdath <krpent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
requests-cache = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
